--- a/slack_kw_info_chatbot/pom.xml
+++ b/slack_kw_info_chatbot/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.11</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.12.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
